add end session endpoint
- allow updating locations for the session
- added debug endpoint
- wrap session handling into helper
- bring back some tests
