# openapi.yaml
@@ -24,6 +24,21 @@ paths:
               schema:
                 $ref: '#/components/schemas/newSessionResponse'
 
+  /end_session/{session_guid}:
+    get:
+      operationId: endSession
+      summary: Indicate that the player has won the game or otherwise wishes to terminate the session.
+      parameters:
+      - in: path
+        name: session_guid
+        schema:
+          type: string
+        required: true
+        description: The GUID of the game session.
+      responses:
+        "200":
+          description: OK
+
   /inventory/{session_guid}:
     get:
       operationId: getInventory
@@ -83,9 +98,32 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/locationResponse'
+                $ref: '#/components/schemas/location'
+    put:
+      operationId: setLocation
+      summary: Create or update a full location description.
+      parameters:
+      - in: path
+        name: session_guid
+        schema:
+          type: string
+        required: true
+        description: The GUID of the game session.
+      requestBody:
+      required: true
+      content:
+        application/json:
+          schema:
+            $ref: '#/components/schemas/location'
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/location'
     post:
-      operationId: move
+      operationId: movePlayer
       summary: Move the player to a new location.
       parameters:
       - in: path
@@ -106,7 +144,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/locationResponse'
+                $ref: '#/components/schemas/location'
 
 components:
   schemas:
@@ -128,7 +166,7 @@ components:
       items:
         type: string
       description: The items in the player's inventory.
-    locationResponse:
+    location:
       type: object
       properties:
         name:
